# beat_counter

./: .cursorrules  .gitignore  CHANGELOG.md  DEPLOYMENT.md  README.md  conftest.py  nginx_beats_app.conf.example  pyproject.toml  setup.py  stop_clear_start.sh  supervisor.beats.conf  supervisor.beats.conf.example
.github/workflows/: test.yml
beat_counter/: test_genre_db.py
beat_counter/cli/: detect_beats.py  detect_beats_batch.py  generate_video.py  generate_video_batch.py
beat_counter/core/: __init__.py  beats.py  detector_protocol.py  pipeline.py  registry.py  test_beat_this_detector.py  test_beats.py  test_detector.py  test_detectors_import.py  test_pipeline.py  test_raw_beats.py  test_registry.py  test_registry_extra.py  test_video.py  video.py  video.py.bak
beat_counter/core/detectors/: __init__.py  base.py  beat_this.py  madmom.py  test_base.py  test_beat_this.py  test_madmom.py
beat_counter/utils/: __init__.py  beats_compare.py  file_utils.py  reporting.py  reproducibility.py  test_beats_compare.py  test_file_utils.py  test_reproducibility.py
beat_counter/web_app/: app.py  asgi.py  auth.py  celery_app.py  config.py  start_app.py  start_worker.py  storage.py  test_app_integration.py  test_auth.py  test_storage.py
beat_counter/web_app/static/css/: styles.css
beat_counter/web_app/templates/: file_view.html  processing_queue.html
beat_counter/web_app/uploads/02d1349a-9ac1-46b0-a6ce-81106fea346f/: beat_stats.json  beats.txt  metadata.json
beat_counter/web_app/uploads/02d1349a-9ac1-46b0-a6ce-81106fea346f/web_app/uploads/02d1349a-9ac1-46b0-a6ce-81106fea346f/: metadata.json
beat_counter/web_app/uploads/823c2d91-39ef-4aa2-b218-fbc3c6bd2949/: metadata.json
beat_counter/web_app/uploads/MagicMock/MockCeleryTask/132312722317696/: metadata.json
beat_counter/web_app/uploads/MagicMock/MockCeleryTask/136008438303728/: metadata.json
beat_counter/web_app/uploads/f9fd8c5e-a805-44e3-bae3-ffa58be4eca5/: beats.txt  metadata.json
beat_counter/web_app/uploads/f9fd8c5e-a805-44e3-bae3-ffa58be4eca5/web_app/uploads/f9fd8c5e-a805-44e3-bae3-ffa58be4eca5/: metadata.json
beat_counter/web_app/utils/: task_utils.py
beat_detection/: __init__.py  genre_db.py  test_genre_db.py
beat_detection/cli/: detect_beats.py  detect_beats_batch.py  generate_video.py  generate_video_batch.py  generate_videos.py
beat_detection/core/: __init__.py  beat_this_detector.py  beats.py  detector.py  factory.py  madmom_detector.py  pipeline.py  registry.py  test_beat_this_detector.py  test_beats.py  test_beats_serialization.py  test_detector.py  test_detectors_import.py  test_factory.py  test_pipeline.py  test_raw_beats.py  test_registry.py  test_registry_extra.py  test_video.py  video.py
beat_detection/core/detectors/: __init__.py  base.py  beat_this.py  madmom.py  test_base.py  test_beat_this.py
beat_detection/tests/: conftest.py
beat_detection/utils/: __init__.py  beat_file.py  beats_compare.py  constants.py  file_utils.py  reporting.py  test_beats_compare.py  test_file_utils.py  test_reproducibility.py
data/: dance_music_genres.csv  dance_styles.csv
docs/: dance_genres.md
etc/: config.json.example  example_experiment_config.yaml
fma/: utils.py
plans/: beat_comparison_spec.md  plan_template.md  refactor_beat_detection_structure.md  refactor_pipeline_experiment_orchestrator.md  refactor_video_generation_updated.md  registry-pipeline-refactor.md
scripts/: compare_experiments.py  experiment_orchestrator.py  experimenter.py  update_imports.py
scripts/fma/: calculate_genre_stats.py  download_danceable_tracks.py  expand_genres.py  extract_danceable_tracks.py  get_file_status.py  get_metadata.py  rename_danceable_tracks.py  sample_tracks_by_genre.py
tests/: cut_polka_audio.py  genre_db.py  test_beat_detectors.py  test_beat_this.py  test_beat_this_diagnostic.py  test_celery.py  test_celery_app_integration.py  test_cli.py  test_cli_beat_this.py  test_cli_madmom.py  test_config.py  test_madmom.py  test_process_audio_file.py  test_video_generation.py
tests/data/: Besito_a_Besito_10sec.beats.json
tests/fixtures/: Besito_a_Besito_10sec._beat_stats  Besito_a_Besito_10sec.beats  Deep_Blue_Sea_Blues._beat_stats  Deep_Blue_Sea_Blues.beats
tests/test_tasks/: __init__.py  tasks.py
tools/: __init__.py  manage_users.py  process_batch.py  run_beat_detection.py  run_video_generation.py
web_app/: README.md  app.py  asgi.py  auth.py  celery_app.py  celery_config.py  config.py  metadata.py  requirements.txt  start_app.py  start_worker.py  state_manager.py  storage.py  tasks.py  test_app.py  test_app_integration.py  test_auth.py  test_beat_statistics.py  test_celery.py  test_storage.py
web_app/config/: __init__.py  config.json.example  users.json.example
web_app/static/css/: styles.css
web_app/static/js/: app.js  file_view.js
web_app/templates/: 404.html  file_view.html  index.html  login.html  processing_queue.html
web_app/utils/: task_utils.py
