[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beat-detection-app"
version = "0.1.0"
description = "Web application for audio beat detection and visualization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Beat Detection App Team"}
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "jinja2>=3.0.1",
    "aiofiles>=0.7.0",
    "python-multipart>=0.0.5",
    "pydantic>=1.8.2",
    "celery>=5.2.0",
    "redis>=4.0.0",
    "pyjwt>=2.3.0",
    "madmom @ git+https://github.com/CPJKU/madmom.git",
    "tqdm>=4.64.0",
    "Pillow>=10.0.0",
    "moviepy>=2.1.2",
    "bcrypt>=4.0.1",
    "python-jose>=3.3.0",
    "numpy>=1.21.0",
    "pydub>=0.25.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=21.5b2",
    "flake8>=3.9.2",
    "isort>=5.9.1"
]

[project.scripts]
detect-beats = "beat_detection.cli.detect_beats:main"
generate-videos = "beat_detection.cli.generate_videos:main"

[tool.setuptools]
packages = ["web_app", "beat_detection", "beat_detection.core", "beat_detection.utils", "beat_detection.cli"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["web_app", "beat_detection"]
python_files = "test_*.py"
asyncio_mode = "auto"
