[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beat-detection-app"
version = "0.1.0"
description = "Web application for audio beat detection and visualization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Beat Detection App Team"}
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "jinja2>=3.0.1",
    "aiofiles>=0.7.0",
    "python-multipart>=0.0.5",
    "pydantic>=1.8.2",
    "celery>=5.2.0",
    "redis>=4.0.0",
    "pyjwt>=2.3.0",
    "madmom @ git+https://github.com/CPJKU/madmom.git",
    "tqdm>=4.64.0",
    "Pillow>=10.0.0",
    "moviepy>=2.1.2",
    "bcrypt>=4.0.1",
    "python-jose>=3.3.0",
    "numpy>=1.21.0",
    "pydub>=0.25.1",
    "fsspec>=2025.3.2",
    "aiohttp>=3.11.18",
    "requests>=2.32.3",
    "torch>=2.0.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=21.5b2",
    "flake8>=3.9.2",
    "isort>=5.9.1",
    "pre-commit>=3.3.3",
    "httpx>=0.24.0",
]
beat_this_algo = [
    "beat_this @ git+https://github.com/CPJKU/beat_this@main#egg=beat_this"
]

[project.scripts]
detect-beats = "beat_detection.cli.detect_beats:main"
detect-beats-batch = "beat_detection.cli.detect_beats_batch:main"
generate-video = "beat_detection.cli.generate_video:main"
generate-video-batch = "beat_detection.cli.generate_video_batch:main"

[tool.setuptools]
packages = ["web_app", "beat_detection", "beat_detection.core", "beat_detection.utils", "beat_detection.cli"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["web_app", "beat_detection", "tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (skipped in pre-commit hooks)",
    "integration: marks tests that require external resources",
]
pythonpath = ["."]
addopts = "-m 'not slow'"  # Skip slow tests by default

[dependency-groups]
dev = [
    "pydot>=3.0.4",
]
# Logging configuration
# log_cli = true
# log_cli_level = "INFO"
# log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)d %(message)s"
